--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Coming Soon - Start Bootstrap Theme</title>
+  <title>Rocky Point -Arizona Trade & Tourism Office</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -38,13 +38,7 @@
           <div class="masthead-content text-white py-5 py-md-0">
             <h1 class="mb-3">Muy Pronto!</h1>
             <p class="mb-5">Estamos trabajando muy duro para poder brindar el servicio mediante este sitio. Aun no tenemos fecha exacta de lanzamiento esperanos este
-              <strong>2019</strong>! Regístrese para recibir actualizaciones utilizando el formulario de abajo!</p>
-            <div class="input-group input-group-newsletter">
-              <input type="email" class="form-control" placeholder="Escriba su email..." aria-label="Escriba su email..." aria-describedby="basic-addon">
-              <div class="input-group-append">
-                <button class="btn btn-secondary" type="button">Avisarme!</button>
-              </div>
-            </div>
+              <strong>2019</strong>! Búscanos en nuestras redes sociales estaremos muy contentos de poder atenderte!</p>
           </div>
         </div>
       </div>
@@ -54,18 +48,13 @@
   <div class="social-icons">
     <ul class="list-unstyled text-center mb-0">
       <li class="list-unstyled-item">
-        <a href="#">
+        <a href="https://twitter.com/AZRockyPoint">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
       <li class="list-unstyled-item">
-        <a href="#">
+        <a href="https://www.facebook.com/Rocky-Point-Arizona-Trade-and-Tourism-Office-2130531390535108/">
           <i class="fab fa-facebook-f"></i>
-        </a>
-      </li>
-      <li class="list-unstyled-item">
-        <a href="#">
-          <i class="fab fa-instagram"></i>
         </a>
       </li>
     </ul>
