--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       <div class="row h-100">
         <div class="col-12 my-auto">
           <div class="masthead-content text-white py-5 py-md-0">
-            <h1 class="mb-3">Muy Pronto!</h1>
-            <p class="mb-5">Estamos trabajando muy duro para poder brindar el servicio mediante este sitio. Aun no tenemos fecha exacta de lanzamiento esperanos este
-              <strong>2019</strong>! Búscanos en nuestras redes sociales estaremos muy contentos de poder atenderte!</p>
+            <h1 class="mb-3">Coming soon!</h1>
+            <p class="mb-5">We're working hard to provide the service through this site . We still do not have exact launch date expect this
+              <strong>2019</strong>!Look for us in our social networks we will be very happy to assist you!</p>
           </div>
         </div>
       </div>
