--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
 </head>
 
-<body>
+<body class="row">
 
   <div class="overlay"></div>
   <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
     <source src="mp4/bg.mp4" type="video/mp4">
   </video>
 
-  <div class="masthead">
+  <div class="masthead col-md-6 col-sm-12">
     <div class="masthead-bg"></div>
     <div class="container h-100">
       <div class="row h-100">
@@ -44,6 +44,21 @@
       </div>
     </div>
   </div>
+<div class="col-md-6 col-sm-12" style="
+    height: 30%;
+    margin-bottom: auto;
+    margin-top: auto;
+    width: 100%;
+">
+    <div style="
+    width: 100%;
+    background: url('../img/logo_turismo.png');
+    height: 50%;
+    /* left: 20%; */
+    background-repeat: no-repeat;
+    background-position: center center;
+"></div>
+</div>
 
   <div class="social-icons">
     <ul class="list-unstyled text-center mb-0">
@@ -66,6 +81,9 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/coming-soon.min.js"></script>
+
+
+
 
 </body>
 
