Adding a new image to the index

--- a/index.html
+++ b/index.html
@@ -464,6 +464,8 @@
 				<div class="col-lg-6">
 					<div class="slide-banner pl-0">
 					</div>
+					<div class="slide-banner-2 pl-0">
+					</div>
 				</div>
 				<div class="col-lg-6 mt-lg-0 mt-4">
 					<div class="container">
@@ -585,10 +587,11 @@
 						</div>
 						<div class="card-body">
 							<h5 class="blog-title card-title font-weight-bold">
-								<a href="single.html">Cras ultricies ligula sed.</a>
+								<a href="single.html">Post</a>
 							</h5>
-							<p>At vero eos et accusam et justo duo dolores et ea rebum. Lorem ipsum dolor sit
-								ametLorem ipsum dolor sit amet,sed diam nonumy.</p>
+							<p> This office will ensure that Arizonans can be confident 
+								in having a support network to feel secure and welcome while seeking economic opportunities in Rocky Point, 
+								and Sonorans can enjoy the commercial benefits that US dollars will bring. Is another win- win for the Arizona- Sonora partnership.</p>
 							<a href="single.html" class="blog_link">Read more</a>
 						</div>
 					</div>
@@ -605,10 +608,11 @@
 						</div>
 						<div class="card-body">
 							<h5 class="blog-title card-title font-weight-bold">
-								<a href="single.html">magna porta au blandita.</a>
+								<a href="single.html">Post</a>
 							</h5>
-							<p>At vero eos et accusam et justo duo dolores et ea rebum. Lorem ipsum dolor sit
-								ametLorem ipsum dolor sit amet,sed diam nonumy.</p>
+							<p> This office will ensure that Arizonans can be confident 
+								in having a support network to feel secure and welcome while seeking economic opportunities in Rocky Point, 
+								and Sonorans can enjoy the commercial benefits that US dollars will bring. Is another win- win for the Arizona- Sonora partnership.</p>
 							<a href="single.html" class="blog_link">Read more</a>
 						</div>
 					</div>
@@ -625,10 +629,11 @@
 						</div>
 						<div class="card-body">
 							<h5 class="blog-title card-title font-weight-bold">
-								<a href="single.html">Cras ultricies ligula sed.</a>
+								<a href="single.html">Post</a>
 							</h5>
-							<p>At vero eos et accusam et justo duo dolores et ea rebum. Lorem ipsum dolor sit
-								ametLorem ipsum dolor sit amet,sed diam nonumy.</p>
+							<p> This office will ensure that Arizonans can be confident 
+								in having a support network to feel secure and welcome while seeking economic opportunities in Rocky Point, 
+								and Sonorans can enjoy the commercial benefits that US dollars will bring. Is another win- win for the Arizona- Sonora partnership.</p>
 							<a href="single.html" class="blog_link">Read more</a>
 						</div>
 					</div>
