--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
 	<title>Rocky Point - Arizona Trade & Tourism Office | Home </title>
-	<link rel="shortcut icon" href="logoturismo.ico">
+	<link rel="shortcut icon" href="images/logoturismo.png">
 	<!-- Meta tag Keywords -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
@@ -144,7 +144,8 @@
 							</li>
 							<li>
 								<a href="info@azrptradetourism.com">
-									<span class="fa fa-envelope mr-lg-3 social-icons-top"></span>
+									<a class="fa fa-envelope mr-lg-3 social-icons-top" href="mailto:info@azrptradetourism.com"></a>
+									</li>
 								</a>
 							</li>
 					</ul>
@@ -785,8 +786,7 @@
 													</li>
 													<li>
 														<a href="info@azrptradetourism.com">
-															<span class="fa fa-envelope mr-lg-3"></span>
-														</a>
+														<a class="fa fa-envelope mr-lg-3" href="mailto:info@azrptradetourism.com"></a>
 													</li>
 											</ul>
 									</div>          
