Adding extra picture on the index file

--- a/index.html
+++ b/index.html
@@ -457,7 +457,10 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-lg-6">
-						
+					<div class="slide-banner pl-0  mb-4">
+					</div>
+					<div class="slide-banner-2 pl-0">
+					</div>
 
 				</div>
 				<div class="col-lg-6 mt-lg-0 mt-4">
@@ -554,16 +557,7 @@
 				    </div>
 					 </div>	
 				</div>
-				<div class="col-lg-6 mt-lg-0 my-5">
-						<div class="slide-img-2">
-								<img src="images/barco.jpg" class="img-fluid" alt="" />
-						</div>
-				 </div>
-				 <div class="col-lg-6 mt-lg-0 my-5">
-							<div class="slide-img-3">
-										<img src="images/Shrimp & Fish.jpg" class="img-fluid" alt="" />
-							</div>
-				</div>			
+		
 			</div>
 		</div>
 		</div>
