--- a/contact.html
+++ b/contact.html
@@ -459,8 +459,7 @@
                   </li>
                   <li>
                     <a href="info@azrptradetourism.com">
-                      <span class="fa fa-envelope mr-lg-3"></span>
-                    </a>
+                    <a class="fa fa-envelope mr-lg-3" href="mailto:info@azrptradetourism.com"></a>
                   </li>
                 </ul>
               </div>
