--- a/contact.html
+++ b/contact.html
@@ -230,66 +230,10 @@
         </div>
         <div class="row mt-4">
           <div class="col-lg-7">
-            <h5 class="cont-form">send us a note</h5>
-            <div class="contact-form-moa-temlayouts">
-              <form action="#" method="post" class="register-moa-tem">
-                <div class="form-group">
-                  <label>
-                    Your Name
-                  </label>
-                  <input
-                    class="form-control"
-                    type="text"
-                    placeholder="Name"
-                    name="name"
-                    required=""
-                  />
-                </div>
-                <div class="form-group">
-                  <label>
-                    Mobile
-                  </label>
-                  <input
-                    class="form-control"
-                    type="text"
-                    placeholder="xxxx xxxxx"
-                    name="mobile"
-                    required=""
-                  />
-                </div>
-                <div class="form-group">
-                  <label>
-                    Email
-                  </label>
-                  <input
-                    class="form-control"
-                    type="email"
-                    placeholder="example@email.com"
-                    name="email"
-                    required=""
-                  />
-                </div>
-                <div class="form-group">
-                  <label>
-                    Your message
-                  </label>
-                  <textarea
-                    placeholder="Type your message here"
-                    name="message"
-                    class="form-control"
-                  ></textarea>
-                </div>
-                <div class="form-group mb-0">
-                  <button
-                    type="submit"
-                    class="btn btn-amum-mklayouts btn-block bg-theme text-wh w-100 font-weight-bold text-uppercase"
-                  >
-                    Send
-                  </button>
-                </div>
-              </form>
-            </div>
-          </div>
+              <div class="cognito">
+                  <script src="https://services.cognitoforms.com/s/xu6EBXAb8kiiz3jXs30hOg"></script>
+                  <script>Cognito.load("forms", { id: "2" });</script>
+              </div>
           <div class="col-lg-5 text-center">
             <h5 class="cont-form">get in touch</h5>
             <div class="row flex-column">
