--- a/contact.html
+++ b/contact.html
@@ -229,13 +229,16 @@
           <!-- //footer right -->
         </div>
         <div class="row mt-4">
-          <div class="col-lg-6"> 
             <h5 class="cont-form">send us a note</h5>
             <div class="contact-form-moa-temlayouts">
-                <div class="cognito">
-                    <script src="https://services.cognitoforms.com/s/xu6EBXAb8kiiz3jXs30hOg"></script>
-                    <script>Cognito.load("forms", { id: "2" });</script>
-                    </div>
+              <form action="#" method="post" class="register-moa-tem">
+                <div class="form-group">
+                    <div class="col-lg-7">
+                        <div class="cognito">
+                            <script src="https://services.cognitoforms.com/s/xu6EBXAb8kiiz3jXs30hOg"></script>
+                            <script>Cognito.load("forms", { id: "2" });</script>
+                        </div>
+                </div>
               </form>
             </div>
           </div>
