--- a/contact.html
+++ b/contact.html
@@ -235,57 +235,11 @@
               <form action="#" method="post" class="register-moa-tem">
                 <div class="form-group">
                   <label>
-                    Your Name
+                      <div class="cognito">
+                          <script src="https://services.cognitoforms.com/s/xu6EBXAb8kiiz3jXs30hOg"></script>
+                          <script>Cognito.load("forms", { id: "2" });</script>
+                          </div>
                   </label>
-                  <input
-                    class="form-control"
-                    type="text"
-                    placeholder="Name"
-                    name="name"
-                    required=""
-                  />
-                </div>
-                <div class="form-group">
-                  <label>
-                    Mobile
-                  </label>
-                  <input
-                    class="form-control"
-                    type="text"
-                    placeholder="xxxx xxxxx"
-                    name="mobile"
-                    required=""
-                  />
-                </div>
-                <div class="form-group">
-                  <label>
-                    Email
-                  </label>
-                  <input
-                    class="form-control"
-                    type="email"
-                    placeholder="example@email.com"
-                    name="email"
-                    required=""
-                  />
-                </div>
-                <div class="form-group">
-                  <label>
-                    Your message
-                  </label>
-                  <textarea
-                    placeholder="Type your message here"
-                    name="message"
-                    class="form-control"
-                  ></textarea>
-                </div>
-                <div class="form-group mb-0">
-                  <button
-                    type="submit"
-                    class="btn btn-amum-mklayouts btn-block bg-theme text-wh w-100 font-weight-bold text-uppercase"
-                  >
-                    Send
-                  </button>
                 </div>
               </form>
             </div>
