contact form change

--- a/calendar.html
+++ b/calendar.html
@@ -334,7 +334,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <hr />
               <ul class="list-amum-mkpvtits">
                 <li>
-                  <a href="single.html">
+                  <a href="index.html">
                     more
                   </a>
                 </li>
