--- a/festivals.html
+++ b/festivals.html
@@ -229,8 +229,8 @@
                                     <hr>
                                     <ul class="list-amum-mkpvtits">
                                             <li>
-                                                    <a href="single.html">
-                                                            more
+                                                    <a href="index.html">
+                                                            More
                                                     </a>
                                             </li>
                                             <li class="my-2">
