--- a/login.html
+++ b/login.html
@@ -260,7 +260,7 @@
 										<hr>
 										<ul class="list-amum-mkpvtits">
 												<li>
-														<a href="single.html">
+														<a href="index.html">
 																more
 														</a>
 												</li>
