--- a/register.html
+++ b/register.html
@@ -251,7 +251,7 @@
 										<hr>
 										<ul class="list-amum-mkpvtits">
 												<li>
-														<a href="single.html">
+														<a href="index.html">
 																more
 														</a>
 												</li>
