--- a/about.html
+++ b/about.html
@@ -400,7 +400,7 @@
 										<hr>
 										<ul class="list-amum-mkpvtits">
 												<li>
-														<a href="single.html">
+														<a href="index.html">
 																more
 														</a>
 												</li>
