--- a/contact.html
+++ b/contact.html
@@ -228,7 +228,7 @@
           ></iframe>
           <!-- //footer right -->
         </div>
-        <div class="row mt-4">
+        <div class="row mt-4 justify-content-center">
           <div class="col-lg-6">
             <h5 class="cont-form">send us a note</h5>
             <div class="contact-form-moa-temlayouts">
@@ -244,7 +244,7 @@
               </form>
             </div>
           </div>
-          <div class="col-lg-4 text-center">
+          <div class="col-lg-5 text-center">
             <h5 class="cont-form">get in touch</h5>
             <div class="row flex-column">
               <div class="contact-amum-mk">
@@ -326,11 +326,6 @@
                   </a>
                 </li>
                 <li>
-                  <a href="index.html">
-                    Privacy Policy
-                  </a>
-                </li>
-                <li>
                   <a href="contact.html">
                     Contact Us
                   </a>
@@ -372,8 +367,8 @@
               <hr />
               <ul class="list-amum-mkpvtits">
                 <li>
-                  <a href="single.html">
-                    more
+                  <a href="home.html">
+                    More
                   </a>
                 </li>
                 <li class="my-2">
