--- a/gallery.html
+++ b/gallery.html
@@ -396,13 +396,13 @@
                                     <hr>
                                     <ul class="list-amum-mkpvtits">
                                             <li>
-                                                    <a href="single.html">
-                                                            more
+                                                    <a href="home.html">
+                                                            More
                                                     </a>
                                             </li>
                                             <li class="my-2">
                                                     <a href="portfolio.html">
-                                                            our work
+                                                            Our work
                                                     </a>
                                             </li>
                                             <li class="my-2">
@@ -412,7 +412,7 @@
                                             </li>
                                             <li class="mb-2">
                                                     <a href="contact.html">
-                                                            contact us
+                                                      Contact us
                                                     </a>
                                             </li>
                                     </ul>
