--- a/history.html
+++ b/history.html
@@ -322,8 +322,8 @@
                                     <hr>
                                     <ul class="list-amum-mkpvtits">
                                             <li>
-                                                    <a href="single.html">
-                                                            more
+                                                    <a href="index.html">
+                                                        More
                                                     </a>
                                             </li>
                                             <li class="my-2">
