--- a/index.html
+++ b/index.html
@@ -651,8 +651,8 @@
 										<hr>
 										<ul class="list-amum-mkpvtits">
 												<li>
-														<a href="single.html">
-																more
+														<a href="index.html">
+																More
 														</a>
 												</li>
 												<li class="my-2">
