--- a/mobile.html
+++ b/mobile.html
@@ -225,7 +225,7 @@
 										<hr>
 										<ul class="list-amum-mkpvtits">
 												<li>
-														<a href="single.html">
+														<a href="index.html">
 																more
 														</a>
 												</li>
