--- a/services.html
+++ b/services.html
@@ -354,7 +354,7 @@
 										<hr>
 										<ul class="list-amum-mkpvtits">
 												<li>
-														<a href="single.html">
+														<a href="index.html">
 																more
 														</a>
 												</li>
