--- a/trade.html
+++ b/trade.html
@@ -268,11 +268,21 @@
                     </div> 
                     <div class="col-lg-7"><div class="col-lg-9 mt-lg-0 my-5">
                             <div class="slide-img-2">
-                                <img src="images/jellyfish.jpg" class="img-fluid" alt="" />
+                                <img src="images/barco.jpg" class="img-fluid" alt="" />
                             </div>
                         </div>
                         <div class="col-lg-7 mt-lg-0 my-5">
                                 <div class="slide-img-3">
+                                    <img src="images/Shrimp & Fish.jpg" class="img-fluid" alt="" />
+                                </div>
+                        </div>
+                        <div class="col-lg-7 mt-lg-0 my-5">
+                                <div class="slide-img-4">
+                                    <img src="images/jellyfish.jpg" class="img-fluid" alt="" />
+                                </div>
+                        </div>
+                        <div class="col-lg-7 mt-lg-0 my-5">
+                                <div class="slide-img-5">
                                     <img src="images/geoduck.jpg" class="img-fluid" alt="" />
                                 </div>
                         </div>
@@ -288,7 +298,7 @@
                         </div>
                         <div class="col-lg-7 mt-lg-0 my-5">
                                 <div class="slide-img-5">
-                                    <img src="images/111.jpg" class="img-fluid" alt="" />
+                                     <img src="images/111.jpg" class="img-fluid" alt="" />
                                 </div>
                     </div>
                     </div>              
