--- a/festivals.html
+++ b/festivals.html
@@ -130,7 +130,7 @@
             <li class="breadcrumb-item">
                 <a href="index.html">Home</a>
             </li>
-            <li class="breadcrumb-item active" aria-current="page">Gallery</li>
+            <li class="breadcrumb-item active" aria-current="page">Festivals</li>
         </ol>
     </nav>
     <!-- //breadcrumbs -->
@@ -140,6 +140,45 @@
       <div class="moa-tem_pvt_title text-center">
           <h4 class="amum-mkpvt-title">Page under Construction available soon...</h4>
       </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      
 </section>		    
 <!-- //services --> 
 <!-- footer -->
