--- a/mobile.html
+++ b/mobile.html
@@ -3,7 +3,8 @@
 <html lang="zxx">
 
 <head>
-    <title>Rocky Point - Arizona Trade & Tourism Office | Mobile Consulate </title>
+		<title>Rocky Point - Arizona Trade & Tourism Office | Mobile Consulate </title>
+		<link rel="shortcut icon" href="images/logoturismo.png">
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
