--- a/calendar.html
+++ b/calendar.html
@@ -4,6 +4,7 @@
     <title>
       Rocky Point - Arizona Trade & Tourism Office | Cultural Events
     </title>
+    <link rel="shortcut icon" href="images/logoturismo.png" />
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8" />
