--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="zxx">
   <head>
     <title>Rocky Point - Arizona Trade & Tourism Office | Contact Us</title>
+    <link rel="shortcut icon" href="images/logoturismo.png">
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8" />
