--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,7 @@
 
 <head>
     <title>Rocky Point - Arizona Trade & Tourism Office | Galleries </title>
+    <link rel="shortcut icon" href="images/logoturismo.png">
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
