--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
           <!-- nav -->
           <div class="nav_amum-mkls ml-lg-5">
             <nav>
-              <label for="drop" class="toggle">Menu</label>
+              <label for="drop" class="toggle"> <span class="fa fa-bars"></span></label>
               <input type="checkbox" id="drop" />
               <ul class="menu">
                 <li><a href="index.html">Home</a></li>
