mobile consulate section

--- a/services.html
+++ b/services.html
@@ -229,8 +229,7 @@
                                 <div class="abt-txt">
                                     <div class="abt-txt ml-0"id="Mobile Consulate"></div>
                                     <h4>Mobile Consulate</h4>
-                                    <p>Mobile Consulate service will be provided for all our visitors to have a satisfactory stay. Visit this section in mobile consulate next ...
-                                        <a href="mobile.html" class="btn-link">Mobile Consulate</a></p>
+                                    <p>The US Consulate General Nogales Office has establish a US Mobile Consulate for Rocky Point residents. This program offers direct communication with Consulate officials through a video chat. You can access this service available every third thursday of the month at the City Hall, from 12:00 to 1:30 p.m. Also you can contact the US Mobile Consulate citizen liason Rick Busa at (638)112-4399 or email <a href="mailto: RBUSA1972@gmail.com" class="btn-link">RBUSA1972@gmail.com</a> </p>
                                 </div>
                             </div>
                         </div>
