--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 		<!-- banner text -->
 		<section class="banner"></section>
 		<div class="banner_text_moa-tem_pvt"></div>
-		     <h3 class="home-banner-amum-mk">Rocky Point, Sonora<br>Where the sea and desert come together</h3>
+		     <h3 class="home-banner-amum-mk">Rocky Point, Sonora<br>A desert paradise by the sea of ​​Cortes</h3>
 		<!-- //banner text -->
 		<!-- banner-bottom -->
 		<div class="banner-bottom-amum-mkls">
