--- a/contact.html
+++ b/contact.html
@@ -162,7 +162,7 @@
                   <ul>
                     <li>
                       <a href="#Inmigration Advise" class="drop-text"
-                        >Inmigration Advise</a
+                        >Immigration Advise</a
                       >
                     </li>
                     <li>
