--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 								<a href="services.html">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span></a>
 								<input type="checkbox" id="drop-2" />
 								<ul>
-									<li><a href="#Inmigration Advise" class="drop-text">Inmigration Advise</a></li>
+									<li><a href="#Inmigration Advise" class="drop-text">Immigration Advise</a></li>
 									<li><a href="#Emergency Assistance" class="drop-text">Emergency Assistance</a></li>
 									<li><a href="#City Directory" class="drop-text">City Directory</a></li>
 									<li><a href="#Opening a Bussiness" class="drop-text">Opening a Bussiness</a></li>
@@ -151,7 +151,7 @@
 		<!-- banner text -->
 		<section class="banner"></section>
 		<div class="banner_text_moa-tem_pvt"></div>
-		     <h3 class="home-banner-amum-mk">Rocky Point, Sonora<br>A desert paradise by the sea of ​​Cortes</h3>
+		     <h3 class="home-banner-amum-mk">Rocky Point, Sonora<br>A desert paradise by the sea of ​​Cortéz</h3>
 		<!-- //banner text -->
 		<!-- banner-bottom -->
 		<div class="banner-bottom-amum-mkls">
@@ -182,15 +182,15 @@
 	<section class="single_grid_amum-mk_main align-amum-mk-abt" id="about">
 		<div class="container">
 			<div class="moa-tem_pvt_title text-center">
-				<h4 class="amum-mkpvt-title">You Are Welcome</h4>
-				<p class="sub-title">Puerto Peñasco Sonora, known as Rocky Point, located on the Gulf of California and Great Desert
-					of Altar, has been the major growing tourist destination of the north of Mexico, now receiving
+				<h4 class="amum-mkpvt-title">Welcome</h4>
+				<p class="sub-title">Puerto Peñasco Sonora,also known as Rocky Point, located on the Gulf of California and Great Desert
+					of Altar, has been the major growing tourist destination in the north of Mexico, now receiving
 					more than 2 million visitors a year.
 					It is just 60 miles south of the border of Lukeville Az and very popular for people from California,
 					Arizona, New Mexico, Nevada and Texas for their recreation activities.
 					Thanks to its privileged location, the city has grown its industry in processing sea food products,
 					hand crafts, commercial business, real estate developments and of course tourist services, such as
-					restaurants, hotels and resorts.Come And Enjoy This Paradise.</p>
+					restaurants, hotels and resorts. Come And Enjoy This Paradise.</p>
 			    <div class="d-flex justify-content-center">
 				    <a href="history.html" class="btn amum-mkls-btn">History</a>
 				</div>
@@ -198,7 +198,7 @@
 						<div class="moa-tem_pvt_title text-center">
 							<h4 class="amum-mkpvt-title">what we offer
 							</h4>
-							<p class="sub-title">You can go to our offices and we will guide you in a multiple seices.</p>
+							<p class="sub-title">You can always come and visit our office. Check our section "Services to US Residents" to see how we can help you.</p>
 						</div>	
 			<div class="row">
 				<div class="col-lg-4">
@@ -211,7 +211,7 @@
 							</div>
 							<div class="col-10">
 								<div class="abt-txt">
-									<h4>Inmigration Advise</h4>
+									<h4>Immigration Advise</h4>
 								</div>
 							</div>
 						</div>
