--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,7 @@
                                     <a href="services.html">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                                     <input type="checkbox" id="drop-2" />
                                     <ul>
-											<li><a href="#Inmigration Advise" class="drop-text">Inmigration Advise</a></li>
+											<li><a href="#Inmigration Advise" class="drop-text">Immigration Advise</a></li>
 											<li><a href="#Emergency Assistance" class="drop-text">Emergency Assistance</a></li>
 											<li><a href="#City Directory" class="drop-text">City Directory</a></li>
 											<li><a href="#Opening a Bussiness" class="drop-text">Opening a Bussiness</a></li>
