--- a/services.html
+++ b/services.html
@@ -100,7 +100,7 @@
                                     <a href="services.html">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                                     <input type="checkbox" id="drop-2" />
                                     <ul>
-                                        <li><a href="#Inmigration Advise" class="drop-text">Inmigration Advise</a></li>
+                                        <li><a href="#Inmigration Advise" class="drop-text">Immigration Advise</a></li>
                                         <li><a href="#Emergency Assistance" class="drop-text">Emergency Assistance</a></li>
                                         <li><a href="#City Directory" class="drop-text">City Directory</a></li>
                                         <li><a href="#Opening a Bussiness" class="drop-text">Opening a Bussiness</a></li>
@@ -148,11 +148,11 @@
 							</div>
 							<div class="col-10">
 								<div class="abt-txt">
-                                    <div class="abt-txt ml-0"id="Inmigration Advise"></div>
+                                    <div class="abt-txt ml-0"id="Immigration Advise"></div>
 									<h4>Inmigration Advise</h4>
 									<p> In Mexico there are regulations for citizens of other countries living here. Most of the time US citizens do not stop to get  their tourist permit at the border and come directly to Rocky Point, as RP is considered a tourist destination. <br>
                                         If you are visiting Rocky Point for business we advise you to get your immigration document at the border. Mexican immigration law offers two categories for US citizens living in the country, as temporary or permanent residents. <br>
-                                        Both require a set of requirements and fees incur. There is an Immigration office in town and you can do your filing online at <a class="btn-link" href="http://www.inami.gob.mx">www.inami.gob.mx</a> or you can do it through an immigration consultant, who will guide through the process of filing.<br>
+                                        Both require a set of requirements and fees incur. There is an Immigration office in town and you can do your filing online at <a class="btn-link" href="http://www.inami.gob.mx">www.inami.gob.mx</a> or you can do it through an immigration consultant, who will guide through the through the application process.<br>
                                         If you have questions regarding this, you can contact us.</p>
 								</div>
 							</div>
