--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		function hideURLbar() {
 			window.scrollTo(0, 1);
 		}
+
 	</script>
 	<!-- //Meta tag Keywords -->
 
@@ -103,11 +104,11 @@
 								<a href="services.html">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span></a>
 								<input type="checkbox" id="drop-2" />
 								<ul>
-									<li><a href="#Inmigration Advise" class="drop-text">Immigration Advise</a></li>
+									<li><a href="services.html#Inmigration Advise" class="drop-text">Immigration Advise</a></li>
 									<li><a href="#Emergency Assistance" class="drop-text">Emergency Assistance</a></li>
 									<li><a href="#City Directory" class="drop-text">City Directory</a></li>
 									<li><a href="#Opening a Bussiness" class="drop-text">Opening a Bussiness</a></li>
-									<li><a href="#Mobile Consulate" class="drop-text">Mobile Consulate</a></li>
+									<li><a href="services.html#MobileConsulate" class="drop-text">Mobile Consulate</a></li>
 								</ul>
 							</li>
 							<li><a href="contact.html">Contact Us</a></li>
@@ -716,4 +717,5 @@
 </body>
 
 
+</script>
 </html>
