--- a/trade.html
+++ b/trade.html
@@ -269,24 +269,29 @@
                     </div> 
 
                 <div class="col-md-6">
-                        <div class="col-md-6 mt-lg-0 my-5">
+                        <div class="col-md-7 mt-lg-10 my-5">
                                 <div class="slide-img-2">
                                     <img src="images/jellyfish.jpg" class="img-fluid" alt="" />
                                 </div>
                             </div>
-                        <div class="col-md-6 mt-lg-0 my-5">
+                        <div class="col-md-7 mt-lg-10 my-5">
                                 <div class="slide-img-3">
                                     <img src="images/geoduck.jpg" class="img-fluid" alt="" />
                                 </div>
                         </div>
-                        <div class="col-md-6 mt-lg-0 my-5">
+                        <div class="col-md-7 mt-lg-0 my-5">
                                 <div class="slide-img-5">
                                     <img src="images/cactus.jpg" class="img-fluid" alt="" />
                                 </div>
                         </div>
-                        <div class="col-md-6 mt-lg-0 my-5">
+                        <div class="col-md-7 mt-lg-0 my-5">
                                 <div class="slide-img-5">
                                     <img src="images/snorkel.jpg" class="img-fluid" alt="" />
+                                </div>
+                        </div>
+                        <div class="col-md-7 mt-lg-0 my-5">
+                                <div class="slide-img-5">
+                                    <img src="images/sun-set.png" class="img-fluid" alt="" />
                                 </div>
                         </div>
                 </div>
