--- a/services.html
+++ b/services.html
@@ -17,6 +17,7 @@
         function hideURLbar() {
             window.scrollTo(0, 1);
         }
+
     </script>
     <!-- //Meta tag Keywords -->
 
@@ -104,7 +105,7 @@
                                         <li><a href="#Emergency Assistance" class="drop-text">Emergency Assistance</a></li>
                                         <li><a href="#City Directory" class="drop-text">City Directory</a></li>
                                         <li><a href="#Opening a Bussiness" class="drop-text">Opening a Bussiness</a></li>
-                                        <li><a href="#Mobile Consulate" class="drop-text">Mobile Consulate</a></li>
+                                        <li><a href="#MobileConsulate" class="drop-text">Mobile Consulate</a></li>
                                     </ul>
                                 </li>
                             <li><a href="contact.html">Contact Us</a></li>
@@ -227,7 +228,7 @@
                             </div>
                             <div class="col-10">
                                 <div class="abt-txt">
-                                    <div class="abt-txt ml-0"id="Mobile Consulate"></div>
+                                    <div class="abt-txt ml-0"id="MobileConsulate"></div>
                                     <h4>Mobile Consulate</h4>
                                     <p>The US Consulate General Nogales Office has establish a US Mobile Consulate for Rocky Point residents. This program offers direct communication with Consulate officials through a video chat. 
                                        You can access this service available every third thursday of the month at the City Hall, from 12:00 to 1:30 p.m. Also you can contact the US Mobile Consulate citizen liason Rick Busa at (638)112-4399 or email <a href="mailto: RBUSA1972@gmail.com" class="btn-link">RBUSA1972@gmail.com</a></p>
@@ -417,5 +418,17 @@
 <!-- //move top icon -->
 
 </body>
+
+<script src="js/jquery-1.11.1.min.js"></script>
+<script>
+    $(document).ready(function() {
+        if (window.location.hash) {
+            var hash = window.location.hash;
+            $('html, body').animate({
+                scrollTop :  $(hash).offset().top
+            }, 500);
+        };
+    });
+</script>
 
 </html>
